--- a/frontend/src/components/Sidebar/DownloadButton.module.css
+++ b/frontend/src/components/Sidebar/DownloadButton.module.css
@@ -1,4 +1,4 @@
-.downloadButton {
+/* .downloadButton {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,4 +18,4 @@
 
 .downloadButton:hover {
   background-color: var(--primary-hover);
-}
+} */
